methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:19: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
                             hunt();
                                 ^